--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,28 @@
 
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+# ????
+spring.application.name=PowerStationManageSystem
+#??????????
+#server.servlet.context-path=/powerStation
+#??????????MyBatis??
+#??Mybatis?Mapper??
+mybatis.mapper-locations=classpath:mappers/*xml
+#??Mybatis?????
+mybatis.type-aliases-package=com.example.powerstationmanagesystem.mybatis.entity
+# ???? WEB ????
 server.port=8088
-spring.datasource.url=jdbc:mysql://localhost:3306/test
+# ??????
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# ?????
+spring.datasource.name=local
+# ???????
+spring.datasource.url=jdbc:mysql://localhost:3306/test?serverTimezone=Asia/Shanghai
+# ??????&???
 spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.password=root123
+
+#?????????????
+mybatis.configuration.map-underscore-to-camel-case=true
+#???????
+mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+#pagehelper.support-methods-arguments=false
