--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 	<description>springDemo</description>
 	<properties>
 		<java.version>1.8</java.version>
+		<skipTests>true</skipTests>
 	</properties>
 	<dependencies>
 		<dependency>
